# doc-rag

./: .gitignore  Makefile  PLAN-chapter-detection.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  configuration.md  improvements.md  index.md  roadmap.md  testing.md  troubleshooting.md
src/: adapters.py  api.py  chapter_detection.py  chunking.py  config.py  embeddings.py  extraction.py  ingest.py  log.py  mcp_server.py  middleware.py  qdrant_store.py  reranker.py  retriever.py  trace.py
tests/eval/: benchmark_labels.json  compare_to_baseline.py  conftest.py  eval-baseline.json  generate_report.py  labels.json  run_sweep.py  sweep_report.py  test_e2e_pipeline.py  test_gutenberg_eval.py
tests/eval/benchmark_docs/: AVL-PUR-012_Supplier_Qualification.md  BOM-FLT-H2NEX.md  FIN-AUTH-101_Authorization_Framework.md  HR-POL-030-EMEA_Remote_Work.md  HR-POL-030_Remote_Work_US.md  LEG-GDPR-007_Supplier_Data_Processing.md  OP-204_Incident_Management_v4.md  RGM-2026_Regional_Governance_Matrix.md  SOP-COM-015_Regulatory_Breach_Report.md
tests/unit/: test_adapters.py  test_config.py  test_ingest.py  test_trace.py
