[project]
name = "pdf-rag"
version = "0.1.0"
description = "Local RAG system for PDF documents"
requires-python = ">=3.10"
dependencies = [
    "pymupdf",
    "sentence-transformers",
    "qdrant-client",
    "fastapi",
    "uvicorn",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
pdf-rag-ingest = "src.ingest:main"
pdf-rag-serve = "src.api:main"
pdf-rag-mcp = "src.mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
